http://li3.me/docs/specs/accepted/LSR-0-coding.md

New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2018-04-02 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.5.0


2018-03-23 niel
	Fix: Namespace issue for PHPMailer class.
	Chg: Refactored Misc::sendEmail() to use provided $from address as the 'reply-to' field (and to
		make reading it easier.
2018-03-05 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.4.0


2018-02-27 niel
	Mrg: dev-phpmailer-migration branch. This upgrades the code to use v6.0 of PHPMailer.
2018-02-23 niel
	Mrg: PR 2571, from lawsontyler - GitHub Issue 2530 - Use the existing function that updates git
2018-02-01 niel
	Upd: Updated dependencies.
	Chg: Refactored verify console command to use sub-commands like lithium's g11n console command.
2018-01-08 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.3.0


2017-12-21 niel
	Add: Merging in dev-allasmgr. This adds the option to treat ALL groups as Multigroup.
2017-12-18 niel
	Chg: Additional info for debugging timezone problems.
2017-12-15 niel
	Fix: Added a check in the connection detection code, to only display "No connection configured"
		message when debug mode is enabled. This prevents it being shown during the install
		procedure by default.
2017-12-08 niel
	Fix: Bad logic that caused "No connection defined" message for valid configurations.
	Chg: Deleted misc/testing/Tests/verify_time_settings as differences in various settings is
		irrelevant now.
	Chg: Removing obsolete sources for IRCScraper settings.
2017-12-03 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.8.2.0


2017-11-13